# atarashi

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  CommentExtractor.py  Dockerfile  MANIFEST.in  README.md  atarashi-install.sh  preprocessing.py  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  depandabot.yml
.github/workflows/: build-test.yml  release-publish.yml
atarashi/: atarashii.py  build_deps.py  imtihaan.py
atarashi/agents/: DLD.c  DLD.pyx  atarashiAgent.py  bm25.py  cosineSimNgram.py  dameruLevenDist.py  keywordAgent.py  linearsvc.py  logisticRegression.py  semanticSearch.py  tfidf.py  wordFrequencySimilarity.py
atarashi/data/: license_keywords.txt
atarashi/evaluator/: evaluator.py  keyword_eval.py  keyword_results.csv
atarashi/libs/: commentPreprocessor.py  initialmatch.py  license_clustering.py  ngram.py  utils.py
atarashi/license/: licenseDownloader.py  licenseLoader.py  licensePreprocessor.py  license_merger.py
bayan/: .gitignore  README.md  project-showcase.ipynb  requirements.txt
bayan/extras/: nomos_test_dataset.csv  obligation_clause_verification_dataset.csv
bayan/helpers/: functions.py  llm_client.py  models.py  prompts.py
data/: NGram_DataFrame.csv
debian/: atarashi.lintian-overrides  changelog  control  copyright  rules  watch
docs/: Makefile  conf.py  index.rst
docs/source/: atarashi.agents.atarashiAgent.rst  atarashi.agents.cosineSimNgram.rst  (+20 more)
install/: atarashi-install.sh
license extractor/: LicenseheaderExtractor.py  licenseHeader.csv
license_extractor/: LicenseDownloader.py  license_merger.py
licenses/: 2018-04-14_3_1.csv
preprocessed_csv/: preprocessedListNoStemNoStop.csv  preprocessedListStem.csv
scripts/: CommentExtractor.py  CommentPreprocessor.py  CosineSimNgram.py  LicensePreprocessor.py  atarashii.py  dameruLevenDist.py  exactMatch.py  getLicenses.py  imtihaan.py  initial_match.py  initialmatch.py  license_clustering.py  ngram.py  pariksha.py  preprocessing.py  tfidf.py  utils.py  wordFreqencySimilarity.py  wordFrequencySimilarity.py
tests/: GoodTestfilesScan
(+891 files in other folders)
