[build-system]
requires = [
  "setuptools>=39.2.0",
  "wheel",
  "numpy>=1.16.0",
  "tqdm>=4.23.4",
  "pandas>=0.23.1",
  "scikit-learn>=0.18.1",
  "scipy>=0.18.1",
  "textdistance>=3.0.3",
  "pyxDamerauLevenshtein>=1.5",
  "code_comment@git+https://github.com/amanjain97/code_comment@master#egg=code_comment",
  "urllib3>=1.24.1"
]
